Fixed odd spacing
Now there is no extra spacing between the tasks in the queue panel.

--- a/static/style.css
+++ b/static/style.css
@@ -220,7 +220,7 @@ button {
         }
 
         .queue_tasks {
-            height: 130px;
+            max-height: 130px;
             overflow-y: auto;
             padding: 2px;
         }
